src/zephyr_c/net/znet_ip.nim


## *
##  @brief Compare TCP sequence numbers.
##
##  @details This function compares TCP sequence numbers,
##           accounting for wraparound effects.
##
##  @param seq1 First sequence number
##  @param seq2 Seconds sequence number
##
##  @return < 0 if seq1 < seq2, 0 if seq1 == seq2, > 0 if seq > seq2
##

proc net_tcp_seq_cmp*(seq1: uint32; seq2: uint32): int32 {.importc: "$1", header: hdr.}

## *
##  @brief Check that one TCP sequence number is greater.
##
##  @details This is convenience function on top of net_tcp_seq_cmp().
##
##  @param seq1 First sequence number
##  @param seq2 Seconds sequence number
##
##  @return True if seq > seq2
##

proc net_tcp_seq_greater*(seq1: uint32; seq2: uint32): bool {.importc: "$1", header: hdr.}

## *
##  @brief Convert a string of hex values to array of bytes.
##
##  @details The syntax of the string is "ab:02:98:fa:42:01"
##
##  @param buf Pointer to memory where the bytes are written.
##  @param buf_len Length of the memory area.
##  @param src String of bytes.
##
##  @return 0 if ok, <0 if error
##

proc net_bytes_from_str*(buf: ptr uint8; buf_len: cint; src: cstring): cint {.
    importc: "net_bytes_from_str", header: hdr.}

## *
##  @brief Convert Tx network packet priority to traffic class so we can place
##  the packet into correct Tx queue.
##
##  @param prio Network priority
##
##  @return Tx traffic class that handles that priority network traffic.
##

proc net_tx_priority2tc*(prio: net_priority): cint {.importc: "net_tx_priority2tc",
    header: hdr.}

## *
##  @brief Convert Rx network packet priority to traffic class so we can place
##  the packet into correct Rx queue.
##
##  @param prio Network priority
##
##  @return Rx traffic class that handles that priority network traffic.
##

proc net_rx_priority2tc*(prio: net_priority): cint {.importc: "net_rx_priority2tc",
    header: hdr.}

## *
##  @brief Convert network packet VLAN priority to network packet priority so we
##  can place the packet into correct queue.
##
##  @param priority VLAN priority
##
##  @return Network priority
##

proc net_vlan2priority*(priority: uint8): net_priority {.importc: "$1", header: hdr.}

## *
##  @brief Convert network packet priority to network packet VLAN priority.
##
##  @param priority Packet priority
##
##  @return VLAN priority (PCP)
##

proc net_priority2vlan*(priority: net_priority): uint8 {.importc: "$1", header: hdr.}

## *
##  @brief Return network address family value as a string. This is only usable
##  for debugging.
##
##  @param family Network address family code
##
##  @return Network address family as a string, or NULL if family is unknown.
##

proc net_family2str*(family: TSa_Family): cstring {.importc: "net_family2str",
    header: hdr.}

## *
##  @}
##
